--- a/frontend/src/views/profile/myProfile.html
+++ b/frontend/src/views/profile/myProfile.html
@@ -34,11 +34,18 @@
                                 <span class="glyphicon glyphicon-list-alt"></span> My Bookings History
                             </a>
                         </li>
+                        
+                        <li ui-sref-active="active">
+                            <a ui-sref=".myConversations">
+                                <span class="glyphicon glyphicon-comment"></span> My Conversations
+                            </a>
+                        </li>
                         <li ui-sref-active="active">
                             <a ng-click="logout()">
                                 <span class="glyphicon glyphicon-log-out"></span> Logout
                             </a>
                         </li>
+                      
                     </ul>
                 </div>
             </div>
