--- a/frontend/src/views/profile/overview.html
+++ b/frontend/src/views/profile/overview.html
@@ -65,7 +65,7 @@
                                           state-on="'glyphicon glyphicon-star text-warning'"
                                           state-off="'glyphicon glyphicon-star-empty'"
                                           aria-label="Seller Rating"></uib-rating>
-                                <h4>{{user.rating || 'N/A'}} <i class="fa fa-star rating-star"></i></h4>
+                                <h4>{{user.rating || 'new seller'}} <i class="fa fa-star rating-star"></i></h4>
                                 <small class="text-muted">Based on customer reviews</small>
                             </div>
                         </div>
