--- a/frontend/src/views/admin/platformManagement/platformManagement.html
+++ b/frontend/src/views/admin/platformManagement/platformManagement.html
@@ -274,7 +274,7 @@
                                                     <div class="col-xs-12 col-sm-8 col-md-9">
                                                         <div class="car-header-info">
                                                             <strong class="car-title text-primary">{{car.company}} {{car.name}} ({{car.modelYear}})</strong>
-                                                            <span class="label label-info category-label">{{car.category}}</span>
+                                                            <span class="label label-info category-label">{{car.category.name}}</span>
                                                         </div>
                                                     </div>
                                                     <div class="col-xs-12 col-sm-4 col-md-3">
@@ -360,7 +360,7 @@
                                                                                     </tr>
                                                                                     <tr>
                                                                                         <th><i class="glyphicon glyphicon-tags"></i> Category:</th>
-                                                                                        <td>{{car.category}}</td>
+                                                                                        <td>{{ car.category.name}}</td>
                                                                                     </tr>
                                                                                     <tr>
                                                                                         <th><i class="glyphicon glyphicon-dashboard"></i> Mileage:</th>
